--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
      this is the personal site of gregory rueda
      <br>
      <br>
-     interests --> bitcoin, iOS programming w/ swift 3, public health data
+     interests --> bitcoin, iOS programming w/ swift 3
      <br>
      <br>
-     content and projects coming soon
 </center>   
 </body>
 </html>
